--- a/baiOnline_26/3/index.html
+++ b/baiOnline_26/3/index.html
@@ -18,6 +18,9 @@
                 <p>Tên Người Dùng</p>
                 <img src="img/avatar.png" alt="">
             </div>
+            <div class="header-right1">
+                <img src="img/avatar.png" alt="">
+            </div>
         </header>
         <hr>
     <div class="content">
@@ -43,8 +46,65 @@
 
         <article>
             <div class="item">
-            <video src="img/video.mp4"></video>
+            <video controls>
+                <source src="img/video.mp4" >
+            </video>
+            <h3>Tiêu Đề Video</h3>
+            <p>
+                Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed
+            </p>
             </div>
+            <div class="item">
+                <video controls>
+                    <source src="img/video.mp4" >
+                </video>
+                <h3>Tiêu Đề Video</h3>
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit, sed
+                </p>
+                </div>
+                <div class="item">
+                    <video controls>
+                        <source src="img/video.mp4" >
+                    </video>
+                    <h3>Tiêu Đề Video</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit, sed
+                    </p>
+                    </div>
+                    <div class="item">
+                        <video controls>
+                            <source src="img/video.mp4" >
+                        </video>
+                        <h3>Tiêu Đề Video</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit, sed
+                        </p>
+                        </div>
+                        <div class="item">
+                            <video controls>
+                                <source src="img/video.mp4" >
+                            </video>
+                            <h3>Tiêu Đề Video</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit, sed
+                            </p>
+                            </div>
+                            <div class="item">
+                                <video controls>
+                                    <source src="img/video.mp4" >
+                                </video>
+                                <h3>Tiêu Đề Video</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit, sed
+                                </p>
+                                </div>
         </article>
     </div>
     </div>
